python_sources = [
  '__init__.py',
]

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'minimalf2py'
)

incdir_numpy = run_command(py,
  ['-c', 'import os; os.chdir(".."); import numpy; print(numpy.get_include())'],
  check : true
).stdout().strip()

incdir_f2py = run_command(py,
    ['-c', 'import os; os.chdir(".."); import numpy.f2py; print(numpy.f2py.get_include())'],
    check : true
).stdout().strip()

mysource = custom_target('add.c',
  input : ['add.f', 'add.pyf'],  
  output : ['addmodule.c', 
            'add-f2pywrappers.f'],
  command : [py, '-m', 'numpy.f2py', '@INPUT@', 
             '-m', 'add', '--lower', 
             '--build-dir', '@OUTDIR@']
)

inc_np = include_directories(incdir_numpy, incdir_f2py)

py.extension_module('add',
  ['add.f', mysource],
  incdir_f2py / 'fortranobject.c',
  include_directories: inc_np,
  dependencies : py_dep,
  install : true,
  subdir: 'minimalf2py'
)

subdir('tests')